tests/unsafe/calls/unjustified_call.snap
---
source: tests/lib.rs
---
exit_code = 1
stdout = ''
stderr = '''
error: function main directly contains 1 unjustified call to unsafe functions, but is not annotated unsafe
  --> /Users/alexanderportland/Desktop/research/sniff-test/tests/unsafe/calls/unjustified_call.rs:10:1
   |
10 | fn main() {
   | ^^^^^^^^^
   |
   = note: reachable from [*main*]
note: foo is called here
  --> /Users/alexanderportland/Desktop/research/sniff-test/tests/unsafe/calls/unjustified_call.rs:12:5
   |
12 |     foo(&raw const x);
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

'''
